--- a/src/dijk_planner/setup.cfg
+++ b/src/dijk_planner/setup.cfg
@@ -5,4 +5,8 @@ install_scripts=$base/lib/dijk_planner
 
 [options.entry_points]
 console_scripts =
-    dijk_planner = dijk_planner.dijk:main
+    maptest3_planner = team12_planner.maptest3_planner:main
+
+[options.package_data]
+# include the map files in the wheel / install tree
+team12_planner = maps/*.yaml, maps/*.pgm
