--- a/src/dijk_planner/setup.cfg
+++ b/src/dijk_planner/setup.cfg
@@ -1,12 +1,16 @@
-[develop]
-script_dir=$base/lib/dijk_planner
-[install]
-install_scripts=$base/lib/dijk_planner
+[metadata]
+name = team12_planner
+version = 0.0.0
 
-[options.entry_points]
+[options]
+packages = find:
+install_requires =
+    rclpy
+include_package_data = True             # keeps the YAML + PGM
+
+[options.package_data]                  # ship the map with the wheel
+team12_planner = maps/*.yaml, maps/*.pgm
+
+[options.entry_points]                  # ← the important bit
 console_scripts =
     maptest3_planner = team12_planner.maptest3_planner:main
-
-[options.package_data]
-# include the map files in the wheel / install tree
-team12_planner = maps/*.yaml, maps/*.pgm
